# src/app/handler/auth/auth.handler.go
@@ -123,6 +123,16 @@ func (h *Handler) SignIn(c router.IContext) {
 	c.JSON(http.StatusOK, response)
 }
 
+// SignOut is a function that remove token and auth session of user
+// @Summary Sign out user
+// @Description Return the bool value of success
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Success 200 {object} dto.SignOutResponse
+// @Failure 500 {object} dto.ResponseInternalErr "Internal service error"
+// @Failure 503 {object} dto.ResponseServiceDownErr "Service is down"
+// @Router /v1/auth/signout [post]
 func (h *Handler) SignOut(c router.IContext) {
 	token := c.Token()
 
